update documentation api
